tdf#99856 xlsx export: limit dataValidation list to 255 chars

Excel consider the file corrupt if it has an overly long
validation list.

Change-Id: I4145859d4f76e0a70521c7bee33c96927b437ace
Reviewed-on: https://gerrit.libreoffice.org/38038
Reviewed-by: Justin Luth <justin_luth@sil.org>
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>